--- a/.github/workflows/downstream_testing.yml
+++ b/.github/workflows/downstream_testing.yml
@@ -35,12 +35,13 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install tox coverage
-    - name: Install ${{ matrix.name }}
+    - name: Checkout ${{ matrix.name }}
       uses: actions/checkout@v2
       with:
         fetch-depth: 0
         repository: ${{ matrix.repo }}
         path: $GITHUB_WORKSPACE/${{ matrix.name }}
+    - name: Install ${{ matrix.name }}
       run: |
         pip install -e $GITHUB_WORKSPACE/${{ matrix.name }}
     - name: Force Reinstall PyTest
