--- a/.github/workflows/downstream_testing.yml
+++ b/.github/workflows/downstream_testing.yml
@@ -22,6 +22,7 @@ jobs:
             python: "3.9"
             os: ubuntu-latest
             repo: "pytest-dev/pytest-html"
+            tox_env: ""
 
     steps:
     - uses: actions/checkout@v2
@@ -43,5 +44,4 @@ jobs:
         path: $GITHUB_WORKSPACE/${{ matrix.name }}
     - name: Run ${{ matrix.name }} tox
       run: |
-        tox --workdir $GITHUB_WORKSPACE/${{ matrix.name }}
-
+        tox -c $GITHUB_WORKSPACE/${{ matrix.name }}/tox.ini -e ${{ matrix.tox_env }}
