--- a/.github/workflows/downstream_testing.yml
+++ b/.github/workflows/downstream_testing.yml
@@ -42,6 +42,9 @@ jobs:
         fetch-depth: 0
         repository: ${{ matrix.repo }}
         path: $GITHUB_WORKSPACE/${{ matrix.name }}
+    - name: where are the tox.ini's?
+      run: |
+        find -name tox.ini
     - name: Run ${{ matrix.name }} tox
       run: |
         tox -c $GITHUB_WORKSPACE/${{ matrix.name }}/tox.ini -e ${{ matrix.tox_env }}
