--- a/.github/workflows/downstream_testing.yml
+++ b/.github/workflows/downstream_testing.yml
@@ -44,7 +44,7 @@ jobs:
         path: $GITHUB_WORKSPACE/${{ matrix.name }}
     - name: where are the tox.ini's?
       run: |
-        find -name tox.ini
+        ls -l $GITHUB_WORKSPACE/${{ matrix.name }}
     - name: Run ${{ matrix.name }} tox
       run: |
         tox -c $GITHUB_WORKSPACE/${{ matrix.name }}/tox.ini -e ${{ matrix.tox_env }}
