--- a/.github/workflows/downstream_testing.yml
+++ b/.github/workflows/downstream_testing.yml
@@ -41,9 +41,10 @@ jobs:
       with:
         fetch-depth: 0
         repository: ${{ matrix.repo }}
+        path: $HOME/${{ matrix.name }}"
     - name: where are the tox.ini's?
       run: |
-        find -name tox.ini
+        ls -l $HOME/${{ matrix.name }}
     - name: Run ${{ matrix.name }} tox
       run: |
-        tox -c $GITHUB_WORKSPACE/${{ matrix.name }}/tox.ini -e ${{ matrix.tox_env }}
+        tox -c $HOME/${{ matrix.name }}/tox.ini -e ${{ matrix.tox_env }}
