--- a/.github/workflows/downstream_testing.yml
+++ b/.github/workflows/downstream_testing.yml
@@ -41,12 +41,10 @@ jobs:
       with:
         fetch-depth: 0
         repository: ${{ matrix.repo }}
-        path: $CLONE_PATH
-      env:
-        CLONE_PATH: $HOME/${{ matrix.name }}
+        path: ${{ matrix.name }}
     - name: where are the tox.ini's?
       run: |
         find -name tox.ini -ls
     - name: Run ${{ matrix.name }} tox
       run: |
-        tox -c $HOME/${{ matrix.name }}/tox.ini -e ${{ matrix.tox_env }}
+        tox -c $GITHUB_WORKSPACE/${{ matrix.name }}/tox.ini -e ${{ matrix.tox_env }}
