add django. watch explode. try pytest.

--- a/.github/workflows/downstream_testing.yml
+++ b/.github/workflows/downstream_testing.yml
@@ -28,7 +28,7 @@ jobs:
             python: "3.9"
             os: ubuntu-latest
             repo: "pytest-dev/pytest-django"
-            tox_env: "testenv"
+            tox_env: "pytest"
 
     steps:
     - uses: actions/checkout@v2
