--- a/.github/workflows/downstream_testing.yml
+++ b/.github/workflows/downstream_testing.yml
@@ -22,34 +22,36 @@ jobs:
           - name: "pytest-html"
             python: "3.9"
             os: ubuntu-latest
-            repo: "pytest-dev/pytest-html@master"
+            repo: "pytest-dev/pytest-html"
             tox_env: "-e devel"
+            workflow_name: "actions.yml"
           - name: "pytest-django"
             python: "3.9"
             os: ubuntu-latest
-            repo: "pytest-dev/pytest-django@master"
+            repo: "pytest-dev/pytest-django"
             tox_env: ""
+            workflow_name: "main.yml"
 
     steps:
-    - name: Run Target's Action
-      uses: ${{ matrix.repo }}
-    #- uses: actions/checkout@v2
-    #  with:
-    #    fetch-depth: 0
+    - uses: actions/checkout@v2
+      with:
+        fetch-depth: 0
     #- name: Set up Python ${{ matrix.python }}
     #  uses: actions/setup-python@v2
     #  with:
     #    python-version: ${{ matrix.python }}
-    #- name: Install dependencies
-    #  run: |
-    #    python -m pip install --upgrade pip
-    #    pip install tox coverage
-    #- name: Checkout ${{ matrix.name }}
-    #  uses: actions/checkout@v2
-    #  with:
-    #    fetch-depth: 0
-    #    repository: ${{ matrix.repo }}
-    #    path: ${{ matrix.name }}
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install tox coverage
+    - name: Checkout ${{ matrix.name }}
+      uses: actions/checkout@v2
+      with:
+        fetch-depth: 0
+        repository: ${{ matrix.repo }}
+        path: ${{ matrix.name }}
+    - name: Run ${{ matrix.name }}'s Workflow
+      uses: ${{ matrix.name }}/.github/workflows/${{ workflow_name }}
     #- name: where are the tox.ini's?
     #  run: |
     #    find -name tox.ini -ls
