--- a/.github/workflows/downstream_testing.yml
+++ b/.github/workflows/downstream_testing.yml
@@ -45,10 +45,13 @@ jobs:
         fetch-depth: 0
         repository: ${{ matrix.repo }}
         path: ${{ matrix.name }}
+    - name: find me some yamls
+      run: |
+        find -name ${{ matrix.workflow_name }}
     - name: Run Downstream Runner
       run: |
         cd .github/workflows/utils
-        python -m downstream_runner $GITHUB_WORKSPACE/${{ matrix.repo }}/.github/workflows/${{ matrix.workflow_name }} ${{ matrix.jobs }}
+        python -m downstream_runner $HOME/${{ matrix.repo }}/.github/workflows/${{ matrix.workflow_name }} ${{ matrix.jobs }}
     #- name: where are the tox.ini's?
     #  run: |
     #    find -name tox.ini -ls
