--- a/.github/workflows/downstream_testing.yml
+++ b/.github/workflows/downstream_testing.yml
@@ -59,5 +59,5 @@ jobs:
     - name: Run Downstream Runner Docker
       uses: ./testing/downstream_testing
       with:
-        - DS_YAML: $GITHUB_WORKSPACE/${{ matrix.name }}/.github/workflows/${{ matrix.workflow_name }}
-        - DS_JOBS: ${{ matrix.jobs }}
+        DS_YAML: $GITHUB_WORKSPACE/${{ matrix.name }}/.github/workflows/${{ matrix.workflow_name }}
+        DS_JOBS: ${{ matrix.jobs }}
