--- a/.github/workflows/downstream_testing.yml
+++ b/.github/workflows/downstream_testing.yml
@@ -52,10 +52,9 @@ jobs:
     - name: Run Downstream Runner
       run: |
         python -m testing.downstream_testing.downstream_runner $DS_YAML $DS_JOBS
-      with:
-        env:
-          - DS_YAML: $GITHUB_WORKSPACE/${{ matrix.name }}/.github/workflows/${{ matrix.workflow_name }}
-          - DS_JOBS: ${{ matrix.jobs }}
+      env:
+        DS_YAML: $GITHUB_WORKSPACE/${{ matrix.name }}/.github/workflows/${{ matrix.workflow_name }}
+        DS_JOBS: ${{ matrix.jobs }}
     - name: Run Downstream Runner Docker
       uses: ./testing/downstream_testing
       with:
