slightly less dumb

--- a/.github/workflows/downstream_testing.yml
+++ b/.github/workflows/downstream_testing.yml
@@ -56,7 +56,7 @@ jobs:
         DS_YAML: ${{ github.workspace }}/${{ matrix.name }}/.github/workflows/${{ matrix.workflow_name }}
         DS_JOBS: ${{ matrix.jobs }}
     - name: Run Downstream Runner Docker
-      uses: ./testing/downstream_testing
+      uses: testing/downstream_testing
       with:
         DS_YAML: ${{ github.workspace }}/${{ matrix.name }}/.github/workflows/${{ matrix.workflow_name }}
         DS_JOBS: ${{ matrix.jobs }}
