previous dumb didn't work. this dumb likely won't either...

--- a/testing/downstream_testing/Dockerfile
+++ b/testing/downstream_testing/Dockerfile
@@ -2,9 +2,11 @@ ARG ACTION_IMAGE=python:3.8
 
 FROM $ACTION_IMAGE
 
-#COPY entrypoint.sh /entrypoint.sh
+COPY entrypoint.sh /entrypoint.sh
 COPY downstream_runner.py /downstream_runner.py
 
 RUN pip install --no-cache-dir pyyaml
 
-CMD [ "python", "-m", "downstream_runner", $DS_YAML, $DS_JOBS, $DS_EXCLUDE]
+#CMD [ "python", "-m", "downstream_runner", $DS_YAML, $DS_JOBS, $DS_EXCLUDE]
+
+ENTRYPOINT [ "/entrypoint.sh" ]
