full send the dumb

--- a/.github/workflows/downstream_testing.yml
+++ b/.github/workflows/downstream_testing.yml
@@ -45,18 +45,18 @@ jobs:
         fetch-depth: 0
         repository: ${{ matrix.repo }}
         path: ${{ matrix.name }}
-    - name: find me some yamls
-      run: |
-        pwd
-        find -name ${{ matrix.workflow_name }}
-    - name: Run Downstream Runner
-      run: |
-        python -m testing.downstream_testing.downstream_runner $DS_YAML $DS_JOBS
-      env:
-        DS_YAML: ${{ github.workspace }}/${{ matrix.name }}/.github/workflows/${{ matrix.workflow_name }}
-        DS_JOBS: ${{ matrix.jobs }}
+    #- name: find me some yamls
+    #  run: |
+    #    pwd
+    #    find -name ${{ matrix.workflow_name }}
+    #- name: Run Downstream Runner
+    #  run: |
+    #    python -m testing.downstream_testing.downstream_runner $DS_YAML $DS_JOBS
+    #  env:
+    #    DS_YAML: ${{ github.workspace }}/${{ matrix.name }}/.github/workflows/${{ matrix.workflow_name }}
+    #    DS_JOBS: ${{ matrix.jobs }}
     - name: Run Downstream Runner Docker
       uses: ./testing/downstream_testing
       with:
-        DS_YAML: /github/workspace/${{ matrix.name }}/.github/workflows/${{ matrix.workflow_name }}
+        DS_YAML: ${{ github.workspace }}/${{ matrix.name }}/.github/workflows/${{ matrix.workflow_name }}
         DS_JOBS: ${{ matrix.jobs }}
