--- a/.github/workflows/downstream_testing.yml
+++ b/.github/workflows/downstream_testing.yml
@@ -58,5 +58,5 @@ jobs:
     - name: Run Downstream Runner Docker
       uses: ./testing/downstream_testing
       with:
-        DS_YAML: ${{ github.workspace }}/${{ matrix.name }}/.github/workflows/${{ matrix.workflow_name }}
+        DS_YAML: ./${{ matrix.name }}/.github/workflows/${{ matrix.workflow_name }}
         DS_JOBS: ${{ matrix.jobs }}
