--- a/.github/workflows/downstream_testing.yml
+++ b/.github/workflows/downstream_testing.yml
@@ -20,12 +20,12 @@ jobs:
             repo: "pytest-dev/pytest-html"
             jobs: "build_python"
             workflow_name: "actions.yml"
-          - name: "pytest-django"
-            python: "3.9"
-            os: ubuntu-latest
-            repo: "pytest-dev/pytest-django"
-            jobs: "test"
-            workflow_name: "main.yml"
+          #- name: "pytest-django"
+          #  python: "3.9"
+          #  os: ubuntu-latest
+          #  repo: "pytest-dev/pytest-django"
+          #  jobs: "test"
+          #  workflow_name: "main.yml"
 
     steps:
     - uses: actions/checkout@v2
