--- a/.github/workflows/downstream_testing.yml
+++ b/.github/workflows/downstream_testing.yml
@@ -31,14 +31,14 @@ jobs:
     - uses: actions/checkout@v2
       with:
         fetch-depth: 0
-    - name: Set up Python ${{ matrix.python }}
-      uses: actions/setup-python@v2
-      with:
-        python-version: ${{ matrix.python }}
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install pyyaml
+    #- name: Set up Python ${{ matrix.python }}
+    #  uses: actions/setup-python@v2
+    #  with:
+    #    python-version: ${{ matrix.python }}
+    #- name: Install dependencies
+    #  run: |
+    #    python -m pip install --upgrade pip
+    #    pip install pyyaml
     - name: Checkout ${{ matrix.name }}
       uses: actions/checkout@v2
       with:
