--- a/testing/downstream_testing/Dockerfile
+++ b/testing/downstream_testing/Dockerfile
@@ -5,15 +5,16 @@ FROM $ACTION_IMAGE
 COPY entrypoint.sh /entrypoint.sh
 #COPY downstream_runner.py /downstream_runner.py
 
-RUN apt-get update && \
-    apt-get install --no-install-recommends -y make build-essential libssl-dev zlib1g-dev \
+RUN apt-get update
+RUN apt-get install --no-install-recommends -y make build-essential libssl-dev zlib1g-dev \
     libreadline-dev libsqlite3-dev wget curl llvm libncurses5-dev xz-utils tk-dev\
-    libxml2-dev libxmlsec1-dev libffi-dev liblzma-dev
-    
-SHELL [ "bash", "curl", "https://pyenv.run", "|", "bash"]
+    libxml2-dev libxmlsec1-dev libffi-dev liblzma-dev && \
+RUN curl https://pyenv.run | bash
 
+ENV PYENV_ROOT="$HOME/.pyenv"
+ENV PATH="$PYENV_ROOT/shims:$PYENV_ROOT/bin:$PATH"
 
-#RUN pip install --no-cache-dir pyyaml
+RUN pip install --no-cache-dir pyyaml
 
 #CMD [ "python", "-m", "downstream_runner", $DS_YAML, $DS_JOBS, $DS_EXCLUDE]
 
