--- a/testing/downstream_testing/Dockerfile
+++ b/testing/downstream_testing/Dockerfile
@@ -9,10 +9,11 @@ RUN apt-get update
 RUN apt-get install --no-install-recommends -y make build-essential libssl-dev zlib1g-dev \
     libreadline-dev libsqlite3-dev wget curl llvm libncurses5-dev xz-utils tk-dev \
     libxml2-dev libxmlsec1-dev libffi-dev liblzma-dev
-RUN curl https://pyenv.run | bash
 
-ENV PYENV_ROOT="$HOME/.pyenv"
+ENV PYENV_ROOT root/.pyenv
 ENV PATH="$PYENV_ROOT/shims:$PYENV_ROOT/bin:$PATH"
+
+RUN curl https://pyenv.run | bash
 
 RUN pip install --no-cache-dir pyyaml
 
