its getting dumb in here

--- a/.github/workflows/downstream_testing.yml
+++ b/.github/workflows/downstream_testing.yml
@@ -31,31 +31,13 @@ jobs:
     - uses: actions/checkout@v2
       with:
         fetch-depth: 0
-    #- name: Set up Python ${{ matrix.python }}
-    #  uses: actions/setup-python@v2
-    #  with:
-    #    python-version: ${{ matrix.python }}
-    #- name: Install dependencies
-    #  run: |
-    #    python -m pip install --upgrade pip
-    #    pip install pyyaml
     - name: Checkout ${{ matrix.name }}
       uses: actions/checkout@v2
       with:
         fetch-depth: 0
         repository: ${{ matrix.repo }}
         path: ${{ matrix.name }}
-    #- name: find me some yamls
-    #  run: |
-    #    pwd
-    #    find -name ${{ matrix.workflow_name }}
-    #- name: Run Downstream Runner
-    #  run: |
-    #    python -m testing.downstream_testing.downstream_runner $DS_YAML $DS_JOBS
-    #  env:
-    #    DS_YAML: ${{ github.workspace }}/${{ matrix.name }}/.github/workflows/${{ matrix.workflow_name }}
-    #    DS_JOBS: ${{ matrix.jobs }}
-    - name: Run Downstream Runner Docker
+    - name: Run Docker - Downstream Runner
       uses: ./testing/downstream_testing
       with:
         DS_YAML: ./${{ matrix.name }}/.github/workflows/${{ matrix.workflow_name }}
