--- a/.github/workflows/downstream_testing.yml
+++ b/.github/workflows/downstream_testing.yml
@@ -18,10 +18,16 @@ jobs:
             repo: "pytest-dev/pytest-html"
             jobs: "build_python"
             workflow_name: "actions.yml"
+            matrix_exclude: ""
           - name: "pytest-django"
             repo: "pytest-dev/pytest-django"
             jobs: "test"
             workflow_name: "main.yml"
+            matrix_exclude: |
+              checkqa,docs py37-dj30-mysql_innodb-coverage py36-dj22-sqlite-xdist-coverage
+              py37-dj22-sqlite-xdist-coverage py38-dj30-sqlite-xdist-coverage 
+              py38-dj31-sqlite-xdist-coverage py38-dj32-sqlite-xdist-coverage py39-djmain-sqlite-coverage
+              py35-dj22-sqlite_file-coverage py36-dj31-mysql_myisam-coverage py36-dj32-mysql_myisam-coverage
 
     steps:
     - uses: actions/checkout@v2
@@ -38,3 +44,4 @@ jobs:
       with:
         DS_YAML: ./${{ matrix.name }}/.github/workflows/${{ matrix.workflow_name }}
         DS_JOBS: ${{ matrix.jobs }}
+        DS_MATRIX_EXCLUDE: ${{ matrix.matrix_exclude }}
