--- a/testing/downstream_testing/Dockerfile
+++ b/testing/downstream_testing/Dockerfile
@@ -17,7 +17,8 @@ ENV PATH="$PYENV_ROOT/shims:$PYENV_ROOT/bin:$PATH"
 
 RUN curl https://pyenv.run | bash
 
-RUN xargs -a pyenv-versions.txt -P 4 -n 1 pyenv install
+RUN xargs -a pyenv-versions.txt -P 4 -n 1 pyenv install \
+    && xargs -a pyenv-versions.txt pyenv global
 
 RUN pip install --no-cache-dir pyyaml
 
