--- a/.github/workflows/downstream_testing.yml
+++ b/.github/workflows/downstream_testing.yml
@@ -33,6 +33,8 @@ jobs:
     - uses: actions/checkout@v2
       with:
         fetch-depth: 0
+    - name: Echo $USER
+      run: echo $USER
     - name: Checkout ${{ matrix.name }}
       uses: actions/checkout@v2
       with:
