--- a/testing/downstream_testing/Dockerfile
+++ b/testing/downstream_testing/Dockerfile
@@ -14,7 +14,8 @@ RUN apt-get install --no-install-recommends -y make build-essential libssl-dev z
 RUN apt-get -y install postgresql postgresql-client libpq-dev
 USER postgres
 RUN /etc/init.d/postgresql start
-RUN psql --command "CREATE USER root WITH CREATEDB"
+RUN pg_isready
+RUN psql --command "CREATE USER root" && createdb -O root
 USER root
 
 ENV PYENV_ROOT /root/.pyenv
