--- a/.github/workflows/downstream_testing.yml
+++ b/.github/workflows/downstream_testing.yml
@@ -19,7 +19,8 @@ jobs:
             jobs: "build_python"
             workflow_name: "actions.yml"
             matrix_exclude: ""
-          - name: "pytest-django"
+          - name: "pytest-django[postgres]"
+            docker_image: postgres:11.11
             repo: "pytest-dev/pytest-django"
             jobs: "test"
             workflow_name: "main.yml"
@@ -42,6 +43,7 @@ jobs:
     - name: Run Docker - Downstream Runner
       uses: ./testing/downstream_testing
       with:
+        ACTION_IMAGE: ${{ matrix.docker_image }}
         DS_NAME: ${{ matrix.name }}
         DS_YAML: ./${{ matrix.name }}/.github/workflows/${{ matrix.workflow_name }}
         DS_JOBS: ${{ matrix.jobs }}
