--- a/testing/downstream_testing/Dockerfile
+++ b/testing/downstream_testing/Dockerfile
@@ -1,6 +1,4 @@
-ARG ACTION_IMAGE
-
-FROM $ACTION_IMAGE
+FROM python:latest
 
 COPY entrypoint.sh /entrypoint.sh
 COPY pyenv-versions.txt ./
@@ -18,7 +16,6 @@ RUN apt-get -y install postgresql postgresql-client libpq-dev
 
 ENV PYENV_ROOT /root/.pyenv
 ENV PATH="$PYENV_ROOT/shims:$PYENV_ROOT/bin:$PATH"
-ENV POSTGRES_USER root
 
 RUN curl https://pyenv.run | bash
 
