--- a/testing/downstream_testing/Dockerfile
+++ b/testing/downstream_testing/Dockerfile
@@ -10,9 +10,11 @@ RUN apt-get install --no-install-recommends -y make build-essential libssl-dev z
     libxml2-dev libxmlsec1-dev libffi-dev liblzma-dev
 
 RUN apt-get -y install postgresql postgresql-client libpq-dev
-#RUN /etc/init.d/postgresql start
-#RUN pg_isready
-#RUN psql --command "CREATE USER root" && createdb -O root
+USER postgres
+RUN /etc/init.d/postgresql start
+RUN pg_isready
+RUN psql --command "CREATE USER root WITH CREATEDB CREATEROLE"
+USER root
 
 ENV PYENV_ROOT /root/.pyenv
 ENV PATH="$PYENV_ROOT/shims:$PYENV_ROOT/bin:$PATH"
