--- a/testing/downstream_testing/Dockerfile
+++ b/testing/downstream_testing/Dockerfile
@@ -11,7 +11,7 @@ RUN apt-get install --no-install-recommends -y make build-essential libssl-dev z
 
 RUN apt-get -y install postgresql postgresql-client libpq-dev
 USER postgres
-RUN /etc/init.d/postgresql start
+RUN pg_ctl start
 EXPOSE 5432
 RUN pg_isready
 RUN psql --command "CREATE USER root WITH CREATEDB CREATEROLE"
