--- a/testing/downstream_testing/Dockerfile
+++ b/testing/downstream_testing/Dockerfile
@@ -10,13 +10,13 @@ RUN apt-get install --no-install-recommends -y make build-essential libssl-dev z
     libxml2-dev libxmlsec1-dev libffi-dev liblzma-dev
 
 RUN apt-get -y install postgresql postgresql-client libpq-dev
-#USER postgres
-#RUN /etc/init.d/postgresql start
+USER postgres
+RUN /etc/init.d/postgresql start
 EXPOSE 5432
-#RUN psql --command "CREATE USER root WITH CREATEDB CREATEROLE"
-#VOLUME ["/etc/postgresql", "/var/log/postgresql", "/var/lib/postgresql"]
+RUN psql -U postgres --command "CREATE USER root WITH CREATEDB CREATEROLE"
+VOLUME ["/etc/postgresql", "/var/log/postgresql", "/var/lib/postgresql"]
 #RUN pg_config
-#USER root
+USER root
 
 ENV PYENV_ROOT /root/.pyenv
 ENV PATH="$PYENV_ROOT/shims:$PYENV_ROOT/bin:$PATH"
