--- a/testing/downstream_testing/Dockerfile
+++ b/testing/downstream_testing/Dockerfile
@@ -12,13 +12,14 @@ RUN apt-get install --no-install-recommends -y make build-essential libssl-dev z
 ENV LC=en_US.UTF-8
 
 RUN apt-get -y install postgresql postgresql-client libpq-dev
+RUN ln -s /var/run/postgresql/.s.PGSQL.5432 /tmp/.s.PGSQL.5432
 RUN /etc/init.d/postgresql start
 EXPOSE 5432
-#USER postgres
-#RUN psql -U postgres --command "CREATE USER root WITH CREATEDB CREATEROLE"
+USER postgres
+RUN psql --command "CREATE USER root WITH CREATEDB CREATEROLE"
 VOLUME ["/etc/postgresql", "/var/log/postgresql", "/var/lib/postgresql"]
 #RUN pg_config
-#USER root
+USER root
 
 ENV PYENV_ROOT /root/.pyenv
 ENV PATH="$PYENV_ROOT/shims:$PYENV_ROOT/bin:$PATH"
