--- a/testing/downstream_testing/Dockerfile
+++ b/testing/downstream_testing/Dockerfile
@@ -12,13 +12,20 @@ RUN apt-get install --no-install-recommends -y make build-essential libssl-dev z
 ENV LC=en_US.UTF-8
 
 RUN apt-get -y install postgresql postgresql-client libpq-dev
-RUN ln -s /var/run/postgresql/.s.PGSQL.5432 /tmp/.s.PGSQL.5432
-RUN /etc/init.d/postgresql start
-EXPOSE 5432
+#RUN ln -s /tmp/.s.PGSQL.5432 /var/run/postgresql/.s.PGSQL.5432
+#RUN ls -l /usr/lib/postgresql/11
+ENV PGDATA=/var/lib/postgresql/11/main
 USER postgres
-RUN psql -h localhost --command "CREATE USER root WITH CREATEDB CREATEROLE"
+RUN echo "host all all  0.0.0.0/0 md5" >> /var/lib/postgresql/11/main/pg_hba.conf
+RUN echo "listen_addresses='*'\nunix_socket_directories = '/var/run/postgresql'" >> /var/lib/postgresql/11/main/postgresql.conf
+RUN cat /var/lib/postgresql/11/main/postgresql.conf
+#RUN ls -l /var/lib/postgresql/11/main
+#RUN /etc/init.d/postgresql start
+#RUN /usr/lib/postgresql/11/bin/pg_ctl start
+EXPOSE 5432
+RUN /etc/init.d/postgresql start && \
+    psql --command "CREATE USER root WITH CREATEDB CREATEROLE"
 VOLUME ["/etc/postgresql", "/var/log/postgresql", "/var/lib/postgresql"]
-#RUN pg_config
 USER root
 
 ENV PYENV_ROOT /root/.pyenv
