--- a/testing/downstream_testing/Dockerfile
+++ b/testing/downstream_testing/Dockerfile
@@ -2,7 +2,6 @@ FROM python:latest
 
 COPY entrypoint.sh /entrypoint.sh
 COPY pyenv-versions.txt ./
-#COPY downstream_runner.py /downstream_runner.py
 
 RUN apt-get update
 RUN apt-get install --no-install-recommends -y make build-essential libssl-dev zlib1g-dev \
@@ -11,9 +10,9 @@ RUN apt-get install --no-install-recommends -y make build-essential libssl-dev z
 
 ENV LC=en_US.UTF-8
 
-RUN apt-get -y install postgresql postgresql-client libpq-dev
-#RUN ln -s /tmp/.s.PGSQL.5432 /var/run/postgresql/.s.PGSQL.5432
-#RUN ls -l /usr/lib/postgresql/11
+
+#### PostgreSQL ####
+RUN apt-get -y --no-install-recommends install postgresql postgresql-client libpq-dev
 ENV PGDATA=/var/lib/postgresql/11/main
 USER postgres
 RUN echo "host all all  0.0.0.0/0 md5" >> /var/lib/postgresql/11/main/pg_hba.conf
@@ -26,14 +25,16 @@ EXPOSE 5432
 RUN /etc/init.d/postgresql start && \
     psql --command "CREATE USER root WITH CREATEDB CREATEROLE"
 VOLUME ["/etc/postgresql", "/var/log/postgresql", "/var/lib/postgresql"]
-CMD [ postgrep ]
+CMD ["postgres"]
 USER root
 
+#### MySQL ####
+
+
+#### pyenv ####
 ENV PYENV_ROOT /root/.pyenv
 ENV PATH="$PYENV_ROOT/shims:$PYENV_ROOT/bin:$PATH"
-
 RUN curl https://pyenv.run | bash
-
 RUN xargs -a pyenv-versions.txt -P 4 -n 1 pyenv install \
     && xargs -a pyenv-versions.txt pyenv global
 
