--- a/testing/downstream_testing/Dockerfile
+++ b/testing/downstream_testing/Dockerfile
@@ -13,6 +13,16 @@ ENV LC=en_US.UTF-8
 
 
 #### PostgreSQL ####
+# explicitly set user/group IDs
+RUN set -eux; \
+	groupadd -r postgres --gid=999; \
+# https://salsa.debian.org/postgresql/postgresql-common/blob/997d842ee744687d99a2b2d95c1083a2615c79e8/debian/postgresql-common.postinst#L32-35
+	useradd -r -g postgres --uid=999 --home-dir=/var/lib/postgresql --shell=/bin/bash postgres; \
+# also create the postgres user's home directory with appropriate permissions
+# see https://github.com/docker-library/postgres/issues/274
+	mkdir -p /var/lib/postgresql; \
+	chown -R postgres:postgres /var/lib/postgresql
+
 RUN apt-get -y --no-install-recommends install postgresql postgresql-client libpq-dev
 
 # grab gosu for easy step-down from root
@@ -38,17 +48,21 @@ RUN set -eux; \
 	gosu --version; \
 	gosu nobody true
 
-ENV PGDATA=/var/lib/postgresql/11/main
+#ENV PGDATA=/var/lib/postgresql/11/main
+ENV PGDATA /var/lib/postgresql/data
+# this 777 will be replaced by 700 at runtime (allows semi-arbitrary "--user" values)
+RUN mkdir -p "$PGDATA" && chown -R postgres:postgres "$PGDATA" && chmod 777 "$PGDATA"
+VOLUME /var/lib/postgresql/data
 ENV POSTGRES_USER=root
 USER postgres
-RUN echo "host all all  0.0.0.0/0 md5" >> /var/lib/postgresql/11/main/pg_hba.conf
-RUN echo "listen_addresses='*'\nunix_socket_directories = '/var/run/postgresql'" >> /var/lib/postgresql/11/main/postgresql.conf
-RUN cat /var/lib/postgresql/11/main/postgresql.conf
+#RUN echo "host all all  0.0.0.0/0 md5" >> /var/lib/postgresql/11/main/pg_hba.conf
+#RUN echo "listen_addresses='*'\nunix_socket_directories = '/var/run/postgresql'" >> /var/lib/postgresql/11/main/postgresql.conf
+#RUN cat /var/lib/postgresql/11/main/postgresql.conf
 #RUN ls -l /usr/lib/postgresql/11/bin
 EXPOSE 5432
 RUN /etc/init.d/postgresql start && \
     psql --command "CREATE USER root WITH CREATEDB CREATEROLE"
-VOLUME ["/etc/postgresql", "/var/log/postgresql", "/var/lib/postgresql"]
+#VOLUME ["/etc/postgresql", "/var/log/postgresql", "/var/lib/postgresql"]
 CMD ["postgres"]
 USER root
 
