--- a/testing/downstream_testing/Dockerfile
+++ b/testing/downstream_testing/Dockerfile
@@ -52,6 +52,7 @@ RUN mkdir -p /var/run/postgresql && chown -R postgres:postgres /var/run/postgres
 RUN mkdir /docker-entrypoint-initdb.d
 ENV PATH $PATH:/usr/lib/postgresql/11/bin
 ENV PGDATA /var/lib/postgresql/data
+ENV PG_VERSION=11
 # this 777 will be replaced by 700 at runtime (allows semi-arbitrary "--user" values)
 RUN mkdir -p "$PGDATA" && chown -R postgres:postgres "$PGDATA" && chmod 777 "$PGDATA"
 VOLUME /var/lib/postgresql/data
